data/derived/sp14/progs/unify/prog4291.ml.out
Characters 85-97:
  d::t-> ((d*10)::t,bigAdd((mulByDigit d*x t) c))
                            ^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
